--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ attrs==18.2.0
 backcall==0.1.0
 bleach==3.0.2
 certifi==2018.10.15
+cycler==0.10.0
 decorator==4.3.0
 defusedxml==0.5.0
 entrypoints==0.2.3
@@ -16,7 +17,9 @@ jupyter==1.0.0
 jupyter-client==5.2.3
 jupyter-console==6.0.0
 jupyter-core==4.4.0
+kiwisolver==1.0.1
 MarkupSafe==1.1.0
+matplotlib==3.0.2
 mistune==0.8.4
 nb-conda==2.2.1
 nb-conda-kernels==2.2.0
@@ -24,6 +27,7 @@ nbconvert==5.4.0
 nbformat==4.4.0
 notebook==5.7.0
 numpy==1.15.4
+pandas==0.23.4
 pandocfilters==1.4.2
 parso==0.3.1
 pexpect==4.6.0
@@ -33,8 +37,10 @@ prometheus-client==0.4.2
 prompt-toolkit==2.0.7
 ptyprocess==0.6.0
 Pygments==2.2.0
+pyparsing==2.3.0
 pyrsistent==0.14.5
 python-dateutil==2.7.5
+pytz==2018.7
 pyzmq==17.1.2
 qtconsole==4.4.2
 Send2Trash==1.5.0
